Revert "CA-748-IE11 aligning fix"

--- a/CollAction/Frontend/app/project/styles/ProjectDetails.scss
+++ b/CollAction/Frontend/app/project/styles/ProjectDetails.scss
@@ -244,6 +244,7 @@
 .participant-information {
     display: flex;
     flex-direction: column;
+    align-items: center;
     text-align: center;
 
     .error {
